# neutone_sdk

./: .gitignore  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: request-add-model.md
auditioner_sdk/: __init__.py  core.py  realtime_stft.py  utils.py
docs/: make.bat
docs/source/: api.rst  conf.py
examples/: example_clipper.py  example_clipper_prefilter.py  example_delayed_passthrough.py  example_deoverdrive.py  example_multi_input.py  example_overdrive-random.py  example_rave.py  example_rave_prefilter.py  example_rave_v1_prefilter.py  example_rave_v1_prefilter_v.py  example_rave_v1_prefilter_voice.py  example_ronn.py  example_spectral_diff.py  example_spectral_filter.py  example_spring_reverb.py  example_unsettled.py  marco.py
examples/neutone_fx/: example_clipper.py  example_clipper_prefilter.py  example_rave_prefilter.py  example_rave_v1_prefilter.py  example_spectral_filter.py
examples/neutone_gen/: example_clipper.py  example_music_gen.py
neutone_midi_sdk/: README.md  __init__.py  constants.py  core.py  data_preparation.py  neutoneMIDI_SDK.py  parameter.py  tokenization.py
neutone_midi_sdk/diagrams/: sdk_diagram.drawio
neutone_midi_sdk/examples/remi/: config.json  remi_wrapper.py  vocab.json
neutone_midi_sdk/training_guides/: model_preparation_guide.md  model_training_guide.md
neutone_sdk/: __init__.py  audio.py  benchmark.py  cached_mel_spec.py  constants.py  conv.py  conv1d_switching.py  conv1dcausal.py  core.py  exceptions.py  filters.py  gcn_1d.py  metadata.py  non_realtime_wrapper.py  parameter.py  queues.py  realtime_stft.py  sandwich.py  sqw.py  stream_conv.py  tcn.py  tcn_1d.py  utils.py  wavform_to_wavform.py
testing/: profiling.py  test_cached_mel_spec.py  test_conv.py  test_profiling.py  test_queues.py  test_sandwiches.py  test_sqw.py  test_stream.py
tests/: conftest.py  test_auditioner_sdk.py  test_deoverdrive_inference.py  test_model_inference.py  test_utils.py
