[tool.poetry]
name = "neutone_sdk"
version = "1.0.0"
description = "SDK for wrapping deep learning models for deployment in Neutone"
readme = "README.md"
authors = ["Qosmo <info@qosmo.jp>"]
homepage = "https://github.com/QosmoInc/neutone_sdk.git"
license = "MIT"
packages = [{include = "neutone_sdk"}]


[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.6"
torch = "1.11.0"
torchaudio = "0.11.0"
jsonschema = "^4.4.0"
requests = "^2.27.1"
tqdm = "^4.63.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pytest = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
